<?xml version="1.0"?>
<package>
  <name>planning_graph_node</name>
  <version>0.0.0</version>
  <description>
    
    Node for requesting plan steps that -- according to experience --
    lead to success when performing a certain task.
    
  </description>

  <author email="winkler@cs.uni-bremen.de">Jan Winkler</author>
  <maintainer email="winkler@cs.uni-bremen.de">Jan Winkler</maintainer>
  
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>planning_msgs</build_depend>
  <build_depend>rospy</build_depend>
  
  <run_depend>planning_msgs</run_depend>
  <run_depend>rospy</run_depend>
</package>
